testsuite/tests/typing-recovery/not_subtype_nonrec.compilers.reference
File "not_subtype_nonrec.ml", line 14, characters 8-35:
14 | let f = (g: u -> unit :> v -> unit)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Type "u -> unit" is not a subtype of "v -> unit"
       Type "float" is not a subtype of "int"
